--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,16 @@
-.App {
-  text-align: center;
+.Background {
+  position:fixed;
+  background-color:white;
+  height:100%;
+  width:100%;
+  text-align:center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Deck {
+  border-style:solid;
+  position:fixed;
+  top:45%;
+  bottom:45%;
+  left:45%;
+  right:45%;
 }
