Set Up CSS Grid

--- a/src/LastSix.css
+++ b/src/LastSix.css
@@ -1,4 +1,4 @@
-.LastSix{
+.container{
   position:fixed;
   text-align:center;
   border-style:solid;
@@ -6,4 +6,16 @@
   right:40%;
   top:60%;
   bottom:30%;
+  display:grid;
+  grid-template-columns: auto auto auto;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-item{
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  /* font-size: 30px; */
+  text-align: center;
 }
